Fixed right close button alignment

--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -34,5 +34,7 @@
 	height: 4vh;
 	font-size: 16px;
 	float: left;
-	display: inline;
+}
+.right-closed {
+	float: right;
 }
